--- a/tracking_multiple_obj.ipynb
+++ b/tracking_multiple_obj.ipynb
@@ -146,7 +146,7 @@
     "    \n",
     "    centers = []\n",
     "    \n",
-    "    #Bucle por objeto\n",
+    "    #Loop for object\n",
     "    for o in obj:\n",
     "        #Rectangles\n",
     "        start_point = o.start_point\n",
